Fix profile layout spacing and minor style tweaks

--- a/profile.html
+++ b/profile.html
@@ -42,7 +42,7 @@
     <!-- Profile Content -->
     <section class="section">
         <div class="container">
-            <div class="card" style="max-width: 800px; margin: 0 auto;">
+            <div class="card card-static" style="max-width: 800px; margin: 0 auto;">
                 <div class="profile-header">
                     <div class="profile-avatar">
                         👤
