--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container header-inner">
             <div class="site-logo">
                 <a href="index.html">
-                    <img src="images/logo/Logo-2_100.png" alt="もるさんデジタル保健室" class="logo-img">
+                    <img src="images/Logo/Logo_250-2.png" alt="もるさんデジタル保健室" class="logo-img">
                     <span class="logo-text">もるさんデジタル保健室</span>
                 </a>
             </div>
@@ -35,12 +35,10 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
+            <img src="images/Logo/Logo_250-2.png" alt="Hero Logo"
+                style="display: block; margin: 0 auto 20px; max-width: 500px;">
             <h1 class="hero-title">ITが苦手でも大丈夫。<br>やさしいデジタル活用ガイド</h1>
-            <p class="hero-subtitle">家計管理・学習管理・AI活用など、<br>日常の“デジタルの困った”を一緒に整理していくデジタル保健室です。</p>
-            <div class="hero-actions">
-                <a href="works.html" class="btn btn-primary">成果物を見てみる</a>
-                <a href="profile.html" class="btn btn-secondary">プロフィールを見る</a>
-            </div>
+            <p class="hero-subtitle">家計管理・学習管理・デジタル活用など、<br>日常の“デジタルの困った”を一緒に整理していくデジタル保健室です。</p>
         </div>
     </section>
 
@@ -75,6 +73,10 @@
                 <li>Excelやスプレッドシートをもう少し使いこなしたい</li>
                 <li>AIやスマホを日常生活に無理なく取り入れたい</li>
             </ul>
+            <div class="hero-actions" style="margin-top: var(--spacing-lg);">
+                <a href="works.html" class="btn btn-primary">成果物を見てみる</a>
+                <a href="profile.html" class="btn btn-secondary">プロフィールを見る</a>
+            </div>
         </div>
     </section>
 
