--- a/works.html
+++ b/works.html
@@ -16,7 +16,7 @@
         <div class="container header-inner">
             <div class="site-logo">
                 <a href="index.html">
-                    <img src="images/logo/Logo-2_100.png" alt="もるさんデジタル保健室" class="logo-img">
+                    <img src="images/Logo/Logo_250-2.png" alt="もるさんデジタル保健室" class="logo-img">
                     <span class="logo-text">もるさんデジタル保健室</span>
                 </a>
             </div>
