Update profile image and refine index page content

--- a/index.html
+++ b/index.html
@@ -48,16 +48,19 @@
             <h2 class="section-title">このサイトでできること</h2>
             <div class="card-grid">
                 <div class="card">
-                    <h3 class="card-title">📊 見える化テンプレート</h3>
-                    <p class="card-text">家計簿やポイント管理など、続かない悩みを解決するスプレッドシートのテンプレートを紹介しています。</p>
+                    <h3 class="card-title">📊 家計の困りごと</h3>
+                    <h4 class="card-subtitle">家計やポイント管理が続かない…。</h4>
+                    <p class="card-text">そんなモヤモヤをスプレッドシートのテンプレートでわかりやすく見える化します。</p>
                 </div>
                 <div class="card">
-                    <h3 class="card-title">✏️ 学習管理サポート</h3>
-                    <p class="card-text">中学生のお子さんがいる家庭向けに、テスト勉強やスケジュール管理をサポートするツールを公開。</p>
+                    <h3 class="card-title">✏️ 子どもの学習の困りごと</h3>
+                    <h4 class="card-subtitle">テスト計画や勉強のペースづくりが難しい…。</h4>
+                    <p class="card-text">中学生の学習スケジュールを親子で整えるためのツールを紹介しています。</p>
                 </div>
                 <div class="card">
-                    <h3 class="card-title">🤖 やさしいAI活用</h3>
-                    <p class="card-text">「AIって難しそう」と思っている人向けに、日常で使える便利なAIの使い方をわかりやすく解説します。</p>
+                    <h3 class="card-title">🤖 デジタル操作の困りごと</h3>
+                    <h4 class="card-subtitle">スマホ設定やデジタルの“ちょっと困った”を簡単にしたい…。</h4>
+                    <p class="card-text">生活の中で役立つデジタルの便利ワザやツールをまとめています。</p>
                 </div>
             </div>
         </div>
@@ -68,10 +71,10 @@
         <div class="container">
             <h2 class="section-title">こんな人におすすめ</h2>
             <ul class="feature-list">
-                <li>家計簿やポイント管理がなかなか続かない</li>
-                <li>子どもの勉強やテスト対策をデジタルでサポートしたい</li>
-                <li>Excelやスプレッドシートをもう少し使いこなしたい</li>
-                <li>AIやスマホを日常生活に無理なく取り入れたい</li>
+                <li>家計管理やポイント管理がなかなか続かない</li>
+                <li>子どもの勉強やテスト対策をもっと整えてあげたい</li>
+                <li>ちょっとしたデジタル操作でつまずいてしまうことがある</li>
+                <li>スマホやAIを日常生活に無理なく取り入れたい</li>
             </ul>
             <div class="hero-actions" style="margin-top: var(--spacing-lg);">
                 <a href="works.html" class="btn btn-primary">成果物を見てみる</a>
@@ -86,20 +89,23 @@
             <h2 class="section-title">おすすめコンテンツ</h2>
             <div class="card-grid">
                 <div class="card">
-                    <h3 class="card-title">家計ダッシュボード</h3>
-                    <p class="card-text mb-md">毎月の収支を一目で把握できるスプレッドシートのテンプレートです。</p>
+                    <h3 class="card-title">見える化家計簿</h3>
+                    <h4 class="card-subtitle">【作り方ガイド】</h4>
+                    <p class="card-text mb-md">GoogleスプレッドシートとLooker Studioを使って家計の“見える化”を実現する方法をまとめています。</p>
                     <a href="works.html#household" class="btn btn-secondary"
                         style="font-size: 0.9rem; padding: 8px 16px;">詳しく見る</a>
                 </div>
                 <div class="card">
                     <h3 class="card-title">学習管理カレンダー</h3>
-                    <p class="card-text mb-md">テストまでの計画を立てやすくする、親子で使えるカレンダーです。</p>
+                    <h4 class="card-subtitle">【テンプレート付き】</h4>
+                    <p class="card-text mb-md">テストまでの学習計画を立てやすくする、親子で使える学習スケジュールテンプレートです。</p>
                     <a href="works.html#study" class="btn btn-secondary"
                         style="font-size: 0.9rem; padding: 8px 16px;">詳しく見る</a>
                 </div>
                 <div class="card">
-                    <h3 class="card-title">AIニュースまとめ</h3>
-                    <p class="card-text mb-md">難しい専門用語を使わずに、最近のAIニュースを解説しています。</p>
+                    <h3 class="card-title">単価・割引計算アプリ</h3>
+                    <h4 class="card-subtitle">【Webアプリ】</h4>
+                    <p class="card-text mb-md">買い物中に役立つ“単価計算・割引計算”を手軽にできる、便利なブラウザアプリです。</p>
                     <a href="works.html#ai" class="btn btn-secondary"
                         style="font-size: 0.9rem; padding: 8px 16px;">詳しく見る</a>
                 </div>
