--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,8 @@
             <div class="card card-static" style="max-width: 800px; margin: 0 auto;">
                 <div class="profile-header">
                     <div class="profile-avatar">
-                        👤
+                        <img src="images/Profile/profile_Upper-body-2.png" alt="モル"
+                            style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     </div>
                     <div>
                         <h2 style="font-size: 1.5rem; margin-bottom: 8px;">モル</h2>
