--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
     </section>
 
-    <!-- Contact CTA Section -->
+    <!-- Contact CTA Section 
     <section class="section text-center" style="background-color: #EBF4FF;">
         <div class="container">
             <h2 class="section-title" style="margin-bottom: var(--spacing-md);">ご相談はこちら</h2>
@@ -121,6 +121,7 @@
             <a href="contact.html" class="btn btn-primary">お問い合わせフォームへ</a>
         </div>
     </section>
+    -->
 
     <!-- Footer -->
     <footer class="site-footer">
