Add privacy policy page and update content

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2 class="section-title">このサイトでできること</h2>
             <div class="card-grid">
                 <div class="card">
-                    <h3 class="card-title">📊 家計の困りごと</h3>
+                    <h3 class="card-title">💰 家計の困りごと</h3>
                     <h4 class="card-subtitle">家計やポイント管理が続かない…。</h4>
                     <p class="card-text">そんなモヤモヤをスプレッドシートのテンプレートでわかりやすく見える化します。</p>
                 </div>
@@ -58,7 +58,7 @@
                     <p class="card-text">中学生の学習スケジュールを親子で整えるためのツールを紹介しています。</p>
                 </div>
                 <div class="card">
-                    <h3 class="card-title">🤖 デジタル操作の困りごと</h3>
+                    <h3 class="card-title">💻 デジタル操作の困りごと</h3>
                     <h4 class="card-subtitle">スマホ設定やデジタルの“ちょっと困った”を簡単にしたい…。</h4>
                     <p class="card-text">生活の中で役立つデジタルの便利ワザやツールをまとめています。</p>
                 </div>
@@ -76,10 +76,11 @@
                 <li>ちょっとしたデジタル操作でつまずいてしまうことがある</li>
                 <li>スマホやAIを日常生活に無理なく取り入れたい</li>
             </ul>
+                <!-- 
             <div class="hero-actions" style="margin-top: var(--spacing-lg);">
                 <a href="works.html" class="btn btn-primary">成果物を見てみる</a>
                 <a href="profile.html" class="btn btn-secondary">プロフィールを見る</a>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -92,22 +93,34 @@
                     <h3 class="card-title">見える化家計簿</h3>
                     <h4 class="card-subtitle">【作り方ガイド】</h4>
                     <p class="card-text mb-md">GoogleスプレッドシートとLooker Studioを使って家計の“見える化”を実現する方法をまとめています。</p>
-                    <a href="works.html#household" class="btn btn-secondary"
-                        style="font-size: 0.9rem; padding: 8px 16px;">詳しく見る</a>
+                    <a href="https://note.com/moru45/n/nf0cde090b39f"
+                      class="btn btn-secondary"
+                      style="font-size: 0.9rem; padding: 8px 16px;"
+                      target="_blank" rel="noopener noreferrer">
+                      詳しく見る
+                    </a>
                 </div>
                 <div class="card">
                     <h3 class="card-title">学習管理カレンダー</h3>
                     <h4 class="card-subtitle">【テンプレート付き】</h4>
                     <p class="card-text mb-md">テストまでの学習計画を立てやすくする、親子で使える学習スケジュールテンプレートです。</p>
-                    <a href="works.html#study" class="btn btn-secondary"
-                        style="font-size: 0.9rem; padding: 8px 16px;">詳しく見る</a>
+                    <a href="https://note.com/moru45/n/n223fbf69ad85"
+                      class="btn btn-secondary"
+                      style="font-size: 0.9rem; padding: 8px 16px;"
+                      target="_blank" rel="noopener noreferrer">
+                      詳しく見る
+                    </a>
                 </div>
                 <div class="card">
                     <h3 class="card-title">単価・割引計算アプリ</h3>
                     <h4 class="card-subtitle">【Webアプリ】</h4>
                     <p class="card-text mb-md">買い物中に役立つ“単価計算・割引計算”を手軽にできる、便利なブラウザアプリです。</p>
-                    <a href="works.html#ai" class="btn btn-secondary"
-                        style="font-size: 0.9rem; padding: 8px 16px;">詳しく見る</a>
+                    <a href="https://note.com/moru45/n/nc7025785a495"
+                      class="btn btn-secondary"
+                      style="font-size: 0.9rem; padding: 8px 16px;"
+                      target="_blank" rel="noopener noreferrer">
+                      詳しく見る
+                    </a>
                 </div>
             </div>
         </div>
@@ -127,6 +140,8 @@
     <footer class="site-footer">
         <div class="container">
             <p>&copy; 2024 もるさんデジタル保健室 All Rights Reserved.</p>
+            <p style="margin-top: 8px; font-size: 0.8rem;"><a href="privacy.html"
+                    style="color: var(--gray-text);">プライバシーポリシー</a></p>
         </div>
     </footer>
 
