--- a/profile.html
+++ b/profile.html
@@ -50,34 +50,35 @@
                     </div>
                     <div>
                         <h2 style="font-size: 1.5rem; margin-bottom: 8px;">モル</h2>
-                        <p style="color: var(--gray-text);">デジタル保健室の先生 / 中学生の父</p>
+                        <p style="color: var(--gray-text);">デジタル保健室の先生(自称) / 中学生の父</p>
                     </div>
                 </div>
 
                 <div class="mb-lg">
                     <h3 class="card-title">自己紹介</h3>
                     <p class="card-text mb-md">
-                        はじめまして。デジタル保健室を運営しているモルと申します。<br>
-                        普段はごく普通の会社員をしながら、中学生の息子の父親として日々奮闘しています。
+                        はじめまして。<br>
+                        「もるさんデジタル保健室」を運営しているモルと申します。<br>
+                        普段は会社員をしながら、中学生の息子を育てる父でもあります。
                     </p>
                     <p class="card-text mb-md">
-                        私自身、最初からデジタルが得意だったわけではありません。
-                        「もっと楽に家計管理がしたい」「子どものスケジュールをうまく管理したい」という
-                        日常の悩みから、少しずつExcelやスプレッドシート、そしてAIの使い方を学んできました。
+                        私自身、もともとはデジタルが得意だったわけではありません。<br>
+                        家計管理がうまく続かなかったり、子どもの学習スケジュールが整理できなかったり……。<br>
+                        そんな日々の「ちょっと困った」を解決したくて、Excel・スプレッドシート・AIの使い方を少しずつ学んできました。<br>
                     </p>
                     <p class="card-text">
-                        「ITって難しそう」「カタカナ用語ばかりで怖い」<br>
-                        そんな風に感じている方にこそ、デジタルの便利さをやさしく伝えたい。
-                        そんな思いで、この「デジタル保健室」を立ち上げました。
+                        「ITって難しそう」「カタカナが多くて怖い」<br>
+                        そう感じている方にも、もっとやさしく、もっと使いやすく。<br>
+                        そんな思いで、この『デジタル保健室』をつくりました。
                     </p>
                 </div>
 
                 <div class="mb-lg">
                     <h3 class="card-title">好きなこと・得意なこと</h3>
                     <ul style="list-style: disc; padding-left: 20px; color: var(--gray-text);">
-                        <li class="mb-sm">📊 <strong>スプレッドシート活用</strong>：家計簿やダッシュボード作りが好きです。</li>
-                        <li class="mb-sm">📅 <strong>学習管理</strong>：子どものテスト計画表を作るのが趣味になりつつあります。</li>
-                        <li class="mb-sm">🤖 <strong>AIニュース収集</strong>：最新のAI情報を、わかりやすく噛み砕くのが得意です。</li>
+                        <li class="mb-sm">💰 <strong>家計管理を「見やすく・続けられる形」に整えること</strong><br>無理なく続けられるように、小さな工夫を積み重ねるのが好きです。</li>
+                        <li class="mb-sm">📘 <strong>子育ての「どうしたらいい？」を整理して形にすること</strong><br>テスト計画や学習スケジュールを、親子で使いやすく“見える化”する工夫を大切にしています。</li>
+                        <li class="mb-sm">💻 <strong>デジタル操作のつまずきをやさしく噛み砕くこと</strong><br>専門用語を使わず、誰にでもわかるようにかんたんに噛み砕いて伝えるのが得意です。</li>
                     </ul>
                 </div>
 
@@ -99,6 +100,8 @@
     <footer class="site-footer">
         <div class="container">
             <p>&copy; 2024 もるさんデジタル保健室 All Rights Reserved.</p>
+            <p style="margin-top: 8px; font-size: 0.8rem;"><a href="privacy.html"
+                    style="color: var(--gray-text);">プライバシーポリシー</a></p>
         </div>
     </footer>
 
