--- a/works.html
+++ b/works.html
@@ -127,6 +127,8 @@
     <footer class="site-footer">
         <div class="container">
             <p>&copy; 2024 もるさんデジタル保健室 All Rights Reserved.</p>
+            <p style="margin-top: 8px; font-size: 0.8rem;"><a href="privacy.html"
+                    style="color: var(--gray-text);">プライバシーポリシー</a></p>
         </div>
     </footer>
 
